2010-02-26  Mario Carrion  <mcarrion@novell.com>

	* MediaElement.cs: Overriding OnCreateAutomationPeer.

	r: toshok

2010-02-25  Jeffrey Stedfast  <fejj@novell.com>

	* VirtualizingStackPanel.cs: isNewlyRealzied isn't the only reason
	a child might need to be added/inserted into the Children list
	(which is what I wrongly assumed before).

	* ItemContainerGenerator.cs: My previous isNewlyRealized logic was
	wrong - more-or-less reverted back to the way it was to make
	moon-unit tests pass.

2010-02-22  Larry Ewing  <lewing@novell.com>

	* VirtualizingPanel.cs: remove extraneous overrides.

	* VirtualizingStackPanel.cs: remove incorrect virtual.
	
2010-02-22  Alan McGovern  <amcgovern@novell.com>

	* ItemCollection.cs: Woohoo, SL3 fixed ItemCollection so that
	  we can now do stuff like "c.Add (5); c.IndexOf (5)" and get
	  a proper answer.

2010-02-17  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs:
	* ItemsControl.cs: Nuke ItemsControl.GetContainerItem along
	  with ListBoxItem.Item. This is all handled by
	  ItemContainerGenerator now. Move all the calls to
	  GetContainerItem to the corresponding ItemContainerGenerator
	  calls. 

2010-02-17  Alan McGovern  <amcgovern@novell.com>

	* ComboBox.cs: Update ComboBox to use ItemContainerGenerator
	  to get the required container when displaying the selected
	  item.

2010-02-16  Alan McGovern  <amcgovern@novell.com>

	* ContentPresenter.cs: Remove the hack to manually set the
	  text on the textblock as the bug has been fixed now.

2010-02-15  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: We no longer need to shuffle
	  items when we replace something in the collection, but we do
	  need to shuffle them when we remove one. This fixes some
	  regressions from my last round of ItemContainerGenerator
	  fixes.

2010-02-12  Alan McGovern  <amcgovern@novell.com>

	* ItemContainerGenerator.cs: braindeadness strikes - i should
	  be checking 'item' not 'f'. Thanks fejj
